--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en" ng-app="app" class="no-js" content="text/html; charset=UTF8">
 <head>
-  <title>A&I Monitoring</title>
+  <title>Cluster Manager</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/img/favicon.png" />
   <link rel="stylesheet" href="css/lib/aui.css" media="all">
@@ -20,8 +20,9 @@
     <nav class="aui-header aui-dropdown2-trigger-group" role="navigation">
       <div class="aui-header-inner">
         <div class="aui-header-primary">
-          <h1 id="logo" class="aui-header-logo aui-header-logo-textonly"> <a>
-          		<span class="aui-header-logo-device">A&amp;I</span></a>
+          <h1 id="logo" class="aui-header-logo aui-header-logo-textonly">
+          		<span class="aui-header-logo-device">
+                <img src="img/scale_white.png" style="width: 30px; height: 30px; padding: 2px; margin-right: 10px;"/></span>
           </h1>
           <ul class="aui-nav">
             <li><a id="data-link" href="/#/clusters/list">Clusters</a></li>
@@ -58,7 +59,6 @@
 <script src="node_modules/angular-resource/angular-resource.js"></script>
 <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
 <script src="node_modules/showdown/compressed/showdown.js"></script>
-<script src="node_modules/highcharts/highcharts.js"></script>
 <script src="node_modules/angular-tablesort/js/angular-tablesort.js"></script>
 
 <script src="js/lib/aui.js"></script>
