extend configuration; enable/disable Kinesis shard monitoring

--- a/themis/web/index.html
+++ b/themis/web/index.html
@@ -89,6 +89,7 @@ AJS.tablessortable.setTableSortable($(".aui-table-sortable"));
 <script src="views/emr.details.js"></script>
 <script src="views/kinesis.js"></script>
 <script src="views/kinesis.list.js"></script>
+<script src="views/kinesis.details.js"></script>
 <script src="views/config.js"></script>
 
 </body>
